Version 6

--Added extra logging to server to track down name collision and house deletion
  issues.

--Extra server logging for all denied transactions.

--Fixed main server install to properly use InnoDB table engine to fix 
  concurrency issues (my web server had InnoDB disabled before).




Version 5   2013-March-11

--Ridiculous.  Forgot to update client version number from 3 to 4 in last
  release, so the v4 server rejects it.  To avoid confusion for people who
  downloaded the bad v4 client, the new client is v5 (with no other changes).




Version 4   2013-March-11

--Added an on-screen button for typing '@' symbol on non-US keyboards.

--House proving screen now explains that you can't use tools.

--Changed living family members to jump back to original positions post-robbery
  (thanks Thibaut Girka).

--Added tool and object occurrence reports to admin view.




Version 3   2013-March-8

--Fixed bug in game playback that could not handle extra recording argument 
  (change highlights on/off flag).

--Fixed a server-side bug that was causing house pings to fail when a user was
  editing their house after robbing a house, and the robbed house was
  simultaneously being edited by that house's owner (thanks Jeremiah Reid, who 
  was spuriously timed out of his house 20 times). 

--Fixed SQL query bug when searching house tables in web admin UI.

--Dealt with houses-to-rob scarcity issue by keeping houses robbable after they
  are successfully robbed the first time, as their money dwindles.  Before, a
  house could only be robbed once before going back on the must-edit-again
  queue. 

--Fixed server bug that caused paintings to disappear from circulation when 
  family members killed but vault not reached.

--Server prevents a dual-client setup from keeping robber's own house checked 
  out for edit during robbery and other non-edit actions.

--Fixed bug that allowed walking over electrified floors post-robbery.
